Version 0.61 - 11 September 2008

- keyboarddrake:
  o fix lithuanian keyboard choices (cf #41031)
- XFdrake:
  o do set a background image when using resolution "Automatic" (#43644)

Version 0.60 - 9 September 2008

- XFdrake:
  o allow xorg.conf to have no "Monitor" section (#42793)
  o [bugfix] fix clicking on "Options" when Composite is disabled 
    (regression introduced in 0.58) (#43710)

Version 0.59 - 18 August 2008

- XFdrake:
  o use 24dpp by default, even on DRI (needed for kde4)
  o ensure we don't drop non-main "Device" (when modifying "Options", #41410)
  o use nvidia-current default settings for nvidia173 as well
  o no need to force XaaNoOffscreenPixmaps, it is the default now in
    x11-server

Version 0.58 - 9 June 2008

- XFdrake:
  o Composite is now the default in xserver 1.4 (#35043)
  o do not create symlink /etc/X11/X to ../../usr/bin/Xorg (#41363)
  o drop support for /etc/X11/XF86Config (replaced by xorg.conf for some time now)
- mousedrake:
  o evdev and imwheel handle orthogonal things, so do use imwheel even if we
  need evdev (#40088)

Version 0.57 - 2 April 2008

- XFdrake:
  o workaround pb with nvidia driver: make dm restart xserver (#38297)
  o do not disable RenderAccel on nvidia-current
    (regression introduced in 0.21)

Version 0.55 - 27 March 2008

- XFdrake:
  o disable "DynamicTwinView" when not using TwinView (#39171)

Version 0.54 - 25 March 2008

- keyboarddrake library:
  o in drakx-finish-install, keyboard is asked after asking country, so have a
    good default based on country too (was done for pt_BR but not fr_XX)
    (#39221)

Version 0.53 - 21 March 2008

- XFdrake:
  o allow to set "EXA" on "intel" driver (#39162)

Version 0.52 - 20 March 2008

- XFdrake:
  o add option "Force display mode of DVI" on driver "nvidia" (#30066)   
- XFdrake library:
  o ensure set_default_background() doesn't fail (#39065)
    (ie default to 1024x768 if 0x0 is given)

Version 0.51 - 19 March 2008

- XFdrake: