@@ -1,3 +1,7 @@
+- XFdrake:
+  o set "PreferredMode" in Monitor section if the user changes the resolution
+   (we still do not use PreferredMode for the default resolution)
+
 Version 0.61 - 11 September 2008
 
 - keyboarddrake:
